# bcndecode

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  build.rs
src/: bcndecode.c  bcndecode.h  bcndecode.rs  decode.rs  lib.rs  tests.rs
