[package]
name = "bcndecode"
version = "0.1.0"
authors = ["Istvan Fehervari <gooksl@gmail.com>", "Robert Nix <mischanix@gmail.com>"]
description = "Decoder for DXTn-compressed image data."
license = "MIT"
build = "build.rs"
repository = "https://github.com/ifeherva/bcndecode"
homepage = "https://github.com/ifeherva/bcndecode"
keywords = ["bcn", "dxt", "image processing"]

[build-dependencies]
gcc = "0.3"

[dependencies]
libc = "0.2.26"
