[package]
name = "bcndecode"
version = "0.2.0"
authors = ["Istvan Fehervari <gooksl@gmail.com>", "Robert Nix <mischanix@gmail.com>"]
description = "Decoder for DXTn-compressed image data."
license = "MIT"
build = "build.rs"
repository = "https://github.com/ifeherva/bcndecode"
homepage = "https://github.com/ifeherva/bcndecode"
keywords = ["bcn", "dxt", "image-processing"]
travis-ci = { repository = "https://github.com/ifeherva/bcndecode", branch = "master" }

[build-dependencies]
gcc = "0.3"

[dev-dependencies]
libc = "0.2.26"

[features]
test = []
